--- a/index.html
+++ b/index.html
@@ -1486,11 +1486,13 @@
             
             // Map specific categories to their images
             const categoryImages = {
-                'tools': 'https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-                'painting': 'https://images.unsplash.com/photo-1600353068440-6361ef3a86e8?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
+                'tools': 'tools.jpg',
+                'painting': 'Paints.jpg',
                 'safety': 'https://images.unsplash.com/photo-1583947581924-a6d1dfc1aae1?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
                 'electrical': 'https://images.unsplash.com/photo-1603732551681-2e91159ca9e1?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-                'plumbing': 'https://images.unsplash.com/photo-1600077106724-946750eeaf3c?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
+                'plumbing': 'Plumbings.jpeg',
+                 'fiberglass': 'fiberglass-emulsion-mat-100-180-225-300-450-600-gsm-1000x1000.webp',
+
             };
             
             if (categoryImages[category.toLowerCase()]) {
