--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faafu.Online</title>
+    <title>LAST HUNT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -954,7 +954,7 @@
                 <div class="footer-section">
                     <h3>Follow Us</h3>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://web.facebook.com/lasthuntfiber/"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-pinterest"></i></a>
@@ -962,7 +962,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; <span id="currentYear"></span> Faafu.Online All rights reserved.</p>
+                <p>&copy; <span id="currentYear"></span>@2014 Last Hunt All rights reserved.</p>
             </div>
         </div>
     </footer>
