--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; <span id="currentYear"></span>@2014 Last Hunt All rights reserved.</p>
+                <p>&copy; <span id="currentYear"></span> Last Hunt All rights reserved.</p>
             </div>
         </div>
     </footer>
