--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
                 <div class="footer-section">
                     <h3>Customer Service</h3>
                     <ul>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="#">FAQs</a></li>
                         <li><a href="#">Shipping Policy</a></li>
                         <li><a href="#">Returns & Refunds</a></li>
