--- a/contact.html
+++ b/contact.html
@@ -340,7 +340,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Our Location</h3>
-                        <p>123 Hardware Street, Industrial Area, Malé, Maldives</p>
+                        <p>Aavina,Orchidmagu', Feeali, Maldives</p>
                     </div>
                 </div>
                 
@@ -350,8 +350,8 @@
                     </div>
                     <div class="contact-details">
                         <h3>Phone Number</h3>
-                        <p><a href="tel:+9601234567">+960 123-4567</a></p>
-                        <p><a href="tel:+9607654321">+960 765-4321</a></p>
+                        <p><a href="tel:+9607705120">+960 7705120</a></p>
+                        <p><a href="tel:+9609131220">+960 9131220</a></p>
                     </div>
                 </div>
                 
@@ -361,7 +361,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Email Address</h3>
-                        <p><a href="mailto:info@lasthunt.com">info@lasthunt.com</a></p>
+                        <p><a href="mailto:info@lasthunt.com">lasthuntshop@gmail.com</a></p>
                         <p><a href="mailto:support@lasthunt.com">support@lasthunt.com</a></p>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Working Hours</h3>
-                        <p>Monday - Friday: 8:00 AM - 6:00 PM</p>
+                        <p>Sunday - Thursday: 8:00 AM - 6:00 PM</p>
                         <p>Saturday: 9:00 AM - 4:00 PM</p>
                         <p>Sunday: Closed</p>
                     </div>
