--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@ nav ul li a:hover {
                 <section class="banner">
                     <div class="slideshow">
                         <!-- Slide 1 -->
-                        <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1600585152220-90363fe7e115?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80')">
+                        <div class="slide active" style="background-image: url('473589816_1661830034537994_6725199693873257810_n.jpg')">
                             <div class="banner-content">
                                 <div class="banner-text">
                                     <h2>Hardware Sale!</h2>
@@ -1547,7 +1547,7 @@ nav ul li a:hover {
                         </div>
                         
                         <!-- Slide 3 -->
-                        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1602810318383-34a5b3d0e4e4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80')">
+                        <div class="slide" style="background-image: url('487828118_1725326171521713_6942816860612342940_n.jpg')">
                             <div class="banner-content">
                                 <div class="banner-text">
                                     <h2>Free Shipping</h2>
