--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ nav ul li a:hover {
                 <div class="footer-section">
                     <h3>About Us</h3>
                     <ul>
-                        <li><a href="#">Our Story</a></li>
+                        <li><a href="story.html">Our Story</a></li>
                         <li><a href="#">Careers</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms & Conditions</a></li>
