--- a/story.html
+++ b/story.html
@@ -955,7 +955,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
                         <li><a href="catalog.html">Fiber Wheelbarrows</a></li>
-                        <li><a href="our-story.html">Our Story</a></li>
+                        <li><a href="story.html">Our Story</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
