--- a/index.html
+++ b/index.html
@@ -1664,7 +1664,7 @@ nav ul li a:hover {
                 'tools': 'tools.jpg',
                 'painting': 'Paints.jpg',
                 'safety': 'https://images.unsplash.com/photo-1583947581924-a6d1dfc1aae1?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-                'electrical': 'https://images.unsplash.com/photo-1603732551681-2e91159ca9e1?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
+                'electric': 'ezgif.com-resize.png',
                 'plumbing': 'Plumbings.jpeg',
                 'fiberWheelBarrows': '487855993_1725326404855023_7611427537336386740_n.jpg',
                 'fiberglass': 'fiberglass-emulsion-mat-100-180-225-300-450-600-gsm-1000x1000.webp'
